# repo

./: .env  app.py  main.py  pyproject.toml
crews/: data_analysis_crew.py
images/: _my_images.py
paginas/: post.py  upload_pdf.py  welcome.py
temp/: TESTE.xlsx
tools/: base_tool.py  calculate_age_tool.py  pdf_generator_tool.py  read_excel_tool.py  vaccine_analyzer_tool.py
